<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.example.codyhunsberger.nexttoarrive.MainActivity">

    <TextView
        android:text="@string/current_time_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="14sp"
        android:textAlignment="center" />

    <TextClock
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textClock"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:fontFamily="monospace"
        android:textSize="18sp" />

    <TextView
        android:text="@string/departing_station_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/departing_textview" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/departure_spinner" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:text="@string/arriving_station_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/arriving_textview" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/arrival_spinner" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:text="@string/results_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/results_textview" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/results_count_spinner" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:text="@string/submit_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit_button" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragContainer">

    </FrameLayout>
</LinearLayout>
